--- a/Student Examination System/.vscode/settings.json
+++ b/Student Examination System/.vscode/settings.json
@@ -3,6 +3,6 @@
     "java.project.outputPath": "bin",
     "java.project.referencedLibraries": [
         "lib/**/*.jar",
-        "e:\\mysql-connector-java-8.0.20\\mysql-connector-java-8.0.20.jar"
+        "mysql-connector-java-8.0.20/mysql-connector-java-8.0.20.jar"
     ]
 }
